improved b-notice texts on mobile, fixed bg

--- a/src/less/blocks/b-notice.less
+++ b/src/less/blocks/b-notice.less
@@ -96,8 +96,8 @@
     font-size: @fs-sm;
     line-height: @fs-sm + @fs-sm / 10;
     &_extrawide {
-      min-width: 90%;
-      max-width: 90%;
+      min-width: 110%;
+      max-width: 110%;
     }
     &_wider {
       min-width: 110%;
