--- a/src/less/images.less
+++ b/src/less/images.less
@@ -56,15 +56,15 @@
   background-position: left center;
 }
 .bg-prosto {
-  background: url("./../img/bg/prosto.jpg") no-repeat;
+  background: url("./../img/bg/prosto.jpg") no-repeat right 10% top;
   background-size: cover !important;
 }
 .bg-reglament_1 {
-  background: url("./../img/bg/reglament_1.jpg") no-repeat;
+  background: url("./../img/bg/reglament_1.jpg") no-repeat right 10% top;
   background-size: cover !important;
 }
 .bg-reglament_2 {
-  background: url("./../img/bg/reglament_2.jpg") no-repeat;
+  background: url("./../img/bg/reglament_2.jpg") no-repeat right 10% top;
   background-size: cover !important;
 }
 .bg-feedback {
